--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -28,5 +28,5 @@ jobs:
         run: |
           for i in ${{ steps.getfile.outputs.files }}
           do
-              echo $i | grep Dockerfile
+              echo $i 
           done
