--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -10,23 +10,48 @@ on:
       - '**/Dockerfile'
 
 jobs:
-  docker-build-images:
+
+  get-docker-files:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout git
+      -
+        name: Checkout git
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: get changed files
+      -
+        name: Get changed files
         id: getfile
         run: |
           echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep Dockerfile | xargs )"
+      - 
+        
 
-      - name: echo the changed files
-        run: |
-          for i in ${{ steps.getfile.outputs.files }}
-          do
-              echo $i 
-          done
+  docker-build-images:
+    needs: [ get-docker-files ]
+    runs-on: ubuntu-latest
+
+    steps:
+      - 
+        name: Checkout git
+        uses: actions/checkout@v2
+      - 
+        name: Set up QEMU
+        uses: docker
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Build and push 
+        uses: docker/build-push-action@v2
+          with:
+            context: php/
+            push: true
+            tags: l9xhub/php:latest
