--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -29,7 +29,7 @@ jobs:
         
 
   docker-build-images:
-    needs: [ get-docker-files ]
+    needs: [ get-dockerfile-list ]
     runs-on: ubuntu-latest
 
     steps:
