--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -23,7 +23,7 @@ jobs:
         name: Get changed files
         id: getfile
         run: |
-          echo "::set-output name=matrix::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep Dockerfile | xargs )"
+          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep Dockerfile | xargs )"
       - 
         name: set-matrix
         run: |
