--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -24,17 +24,13 @@ jobs:
         id: getfile
         run: |
           echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep Dockerfile | xargs )"
-      - 
-        name: set-matrix
-        run: |
-          for i in ${{ steps.getfile.outputs.files }}
-          do
-              echo "::add-matrix name=files::$i"
-          done
-
-  docker-build-images:
+    
+  build-and-push-images:
     needs: [ get-dockerfile-list ]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        file: ${{ steps.collect_apps.matrix }}
 
     steps:
       - 
@@ -46,4 +42,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push images
+        run: |
+          for i in ${{ needs.get-dockerfile-list.getfile.outputs.files }}
+          do
+            tag=`echo $i| awk -F "\\" '{print $1}'`":latest"
+            echo $tag
+          done
 
