--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  get-dockerfile-list:
+  build-and-push-images
     runs-on: ubuntu-latest
     steps:
       -
@@ -24,15 +24,6 @@ jobs:
         id: getfile
         run: |
           echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep Dockerfile | xargs )"
-    
-  build-and-push-images:
-    needs: [ get-dockerfile-list ]
-    runs-on: ubuntu-latest
-
-    steps:
-      - 
-        name: Checkout git
-        uses: actions/checkout@v2
       -
         name: Login to DockerHub
         uses: docker/login-action@v1
@@ -42,7 +33,7 @@ jobs:
       -
         name: Build and push images
         run: |
-          for i in ${{ needs.get-dockerfile-list.getfile.outputs.files }}
+          for i in ${{ steps.getfile.outputs.files }}
           do
             tag=`echo $i| awk -F "\\" '{print $1}'`":latest"
             echo $tag
