--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -8,6 +8,8 @@ on:
   push:
     paths:
       - '*/Dockerfile'
+env:
+  DOCKER_REG: l9xhub
 
 jobs:
 
@@ -35,7 +37,7 @@ jobs:
         run: |
           for i in ${{ steps.getfile.outputs.files }}
           do
-            tag=${{ secrets.DOCKERHUB_USERNAME }}`echo $i| awk -F "/" '{print $1}'`":latest"
+            tag=$DOCKER_REG`echo $i| awk -F "/" '{print $1}'`":latest"
             echo $tag
           done
 
