--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           for path in ${{ steps.getfile.outputs.files }}
           do
-            tag=`echo $i| awk -F "/" '{print $1}'`":latest";
+
+            tag="l9xhub/"`echo $path | awk -F "/" '{print $1}'`":latest";
             docker build -t $tag $path
           done
 
