--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -36,6 +36,7 @@ jobs:
           for path in ${{ steps.getfile.outputs.files }}
           do
             pwd
+            ls -lah
             tag="l9xhub/"`echo $path | awk -F "/" '{print $1}'`":latest";
             docker build -t $tag ./$path
           done
