--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -37,7 +37,8 @@ jobs:
           do
             pwd
             ls -lah
+            cd $path
             tag="l9xhub/"`echo $path | awk -F "/" '{print $1}'`":latest";
-            docker build -t $tag ./$path
+            docker build -t $tag .
           done
 
