--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -35,10 +35,8 @@ jobs:
         run: |
           for path in ${{ steps.getfile.outputs.files }}
           do
-            pwd
-            ls -lah
-            cd $path
-            tag="l9xhub/"`echo $path | awk -F "/" '{print $1}'`":latest";
-            docker build -t $tag .
+            dir=`dirname $path`
+            tag="l9xhub/$dir:latest"
+            docker build -t $dir
           done
 
