--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -8,6 +8,7 @@ on:
   push:
     paths:
       - '*/Dockerfile'
+
 jobs:
 
   build-and-push-images:
@@ -32,13 +33,16 @@ jobs:
       -
         name: Build and push images
         run: |
+          GREEN='\033[0;32m'
+          NC='\033[0m'
+
           for path in ${{ steps.getfile.outputs.files }}
           do
             dir=`dirname $path`
             tag="${{ secrets.DOCKERHUB_USERNAME }}/$dir:latest"
-            echo "Build image $dir"
+            printf "${GREEN}Build image $dir${NC}"
             docker build -t $tag $dir
-            echo "Push image $dit to registry"
+            echo "${GREEN}Push image $dit to registry${NC}"
             docker push $tag
           done
 
