--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -42,7 +42,10 @@ jobs:
             tag="${{ secrets.DOCKERHUB_USERNAME }}/$dir:latest"
             printf "${GREEN}* Build image $dir${NC}\n"
             docker build -t $tag $dir
+            printf "${GREEN}* Image has built successfully{NC}\n"
             printf "${GREEN}* Push image $dir to docker-hub registry${NC}\n"
             docker push $tag
+            printf "${GREEN}* Image has pushed successfully{NC}\n"
+
           done
 
