--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -36,14 +36,14 @@ jobs:
           GREEN='\033[0;32m'
           NC='\033[0m'
 
-          for PATH in ${{ steps.getfile.outputs.files }}
+          for path in ${{ steps.getfile.outputs.files }}
           do
-            NAME=`dirname $PATH`
-            TAG="${{ secrets.DOCKERHUB_USERNAME }}/$NAME:latest"
-            docker build -t $TAG $NAME
-            printf "${GREEN}* Image $NAME  has built successfully${NC}\n"
+            name=`dirname $path`
+            tag="${{ secrets.DOCKERHUB_USERNAME }}/$name:latest"
+            docker build -t $tag $name
+            printf "${GREEN}* Image $name  has built successfully${NC}\n"
             docker push $tag
-            printf "${GREEN}* Image $NAME has pushed successfully${NC}\n"
+            printf "${GREEN}* Image $name has pushed successfully${NC}\n"
 
           done
 
