--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,7 +21,10 @@ jobs:
       
     # Configure AWS Credentials with role
     - name: Configure AWS Credentials
-      run: aws s3 ls
+      run: |
+         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+         export AWS_SECRET_ACCESS_KEY=${{ AWS_SECRET_ACCESS_KEY }}
+         export AWS_DEFAULT_REGION=us-west-2
         
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
