--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Configure AWS Credentials
       run: |
          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-         export AWS_SECRET_ACCESS_KEY=${{ AWS_SECRET_ACCESS_KEY }}
+         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
          export AWS_DEFAULT_REGION=us-west-2
         
     # Install the latest version of Terraform CLI
