--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,7 +25,8 @@ jobs:
          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
          export AWS_DEFAULT_REGION=us-west-2
-         aws s3 ls
+         aws sts get-caller-identity
+
         
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
