--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,8 +22,8 @@ jobs:
     # Configure AWS Credentials with role
     - name: Configure AWS Credentials
       run: |
-         #export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-         #export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
          export AWS_DEFAULT_REGION=us-west-2
          aws sts get-caller-identity
 
