--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,13 +19,12 @@ jobs:
     - name: Checkout git
       uses: actions/checkout@v2
       
-    # Configure AWS Credentials with role
-    - name: Configure AWS Credentials
-      run: |
-         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         export AWS_DEFAULT_REGION=us-west-2
-         aws sts get-caller-identity
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
          
     # Check connection to AWS
     - name: Check connection to AWS
