--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1                                       # containerDefinitions section of your task definition
+  AWS_REGION: us-east-2
 
 jobs:
   deploy:
