--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -31,7 +31,7 @@ jobs:
       
     - name: Login to Amazon ECR
       run: |
-        cd terraform && terraform output && cd ../
+        cd terraform && terraform init && terraform output && cd ../
         aws eks --region $(terraform output -raw region) update-kubeconfig --name $(terraform output -raw cluster_name)
         kubectl get nodes
       
