--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,4 +48,4 @@ jobs:
 
     # Change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve
+      run: terraform destroy -auto-approve
