--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,8 +44,8 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -var-file prod.tfvars
 
     # Change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform destroy -auto-approve
+      run: terraform destroy -var-file prod.tfvars -auto-approve
