--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -1,8 +1,5 @@
- This is a basic workflow to help you get started with Actions
+name: 'buid-images-CI'
 
-name: buid-images-CI
-
-# Controls when the workflow will run
 on:
   push:
     branches:
