--- a/.github/workflows/buid-images-CI.yml
+++ b/.github/workflows/buid-images-CI.yml
@@ -46,3 +46,4 @@ jobs:
             docker push $tag
             printf "${GREEN}* Image $name has pushed successfully${NC}\n"
           done
+          ls -lah
