--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -20,5 +20,5 @@ jobs:
     - name: KUBE_CONFIG setup
       run: |
         echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 -d > /tmp/config
-        export KUBECONFIG=/tmp/config
+        KUBECONFIG=/tmp/config
         kubectl get nodes
