--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -21,4 +21,4 @@ jobs:
       run: |
         echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > /tmp/config
         KUBECONFIG=/tmp/config
-        #kubectl get nodes
+        kubectl --help
