--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -30,3 +30,17 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
         args: apply -f k8s
+        
+    - name: deploy to EKS
+      uses: skiyl9x/kubectl-aws-eks@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        args: apply -f k8s
+      
+    - name: Deployment status
+      uses: skiyl9x/kubectl-aws-eks@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        args: get deploy --output name | xargs -n1 -t kubectl rollout status
