--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -24,9 +24,6 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
       
-    - name: check helm
-      run: helm version
-      
     - name: deploy to EKS
       uses: skiyl9x/kubectl-aws-eks@master
       env:
@@ -44,4 +41,8 @@ jobs:
       with:
         args: get deploy --output name | xargs -n1 -t kubectl rollout status
     
+    - name: run helm
+      run: |
+        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+        helm install prometheus prometheus-community/kube-prometheus-stack
   
