--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -16,10 +16,27 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
       
-    - name: kubectl version
+    - name: deploy to EKS
       uses: skiyl9x/kubectl-aws-eks@master
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
-        args: version
+        args: apply -f k8s
+        
+    - name: Waiting run pods
+      run: sleep 300
+      
+    - name: Deployment status
+      uses: skiyl9x/kubectl-aws-eks@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        args: get deploy --namespace=lemp --output name | xargs -n1 -t kubectl rollout status
