--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-conf
+  namespace: lemp
 data:
   wordpress.conf: |
     server {
@@ -34,6 +35,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deploy
+  namespace: lemp
   labels:
     app: web-app
 spec:
@@ -79,6 +81,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: lemp
   labels:
     run: nginx
 spec:
@@ -95,6 +98,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: wp-pv-volume
+  namespace: lemp
   labels:
     type: local
 spec:
@@ -111,6 +115,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-volume
+  namespace: lemp
 spec:
   accessModes:
     - ReadWriteOnce
