--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -23,9 +23,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
-    
-    - name: list files
-      run: ls -lah
       
     - name: deploy to EKS
       uses: skiyl9x/kubectl-aws-eks@master
@@ -43,3 +40,23 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
         args: get deploy --namespace=lemp --output name | xargs -n1 -t kubectl rollout status --namespace=lemp
+    
+  upload-data:
+    name: Upload data
+    runs-on: ubuntu-latest
+    environment: staging
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+       ref: dev
+    
+    - name: Copy site data from dev branch
+      uses: skiyl9x/kubectl-aws-eks@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        args: pod_name=`kubectl get pod --namespace=lemp -l run=nginx -o jsonpath="{.items[0].metadata.name}"` && \
+              kubectl cp data/site lemp/$pod_name:/ && \
+              kubectl exec -i  --namespace=lemp $pod_name -- chown -R www-data:www-data /site
+    
