--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -43,14 +43,23 @@ jobs:
     
   upload-data:
     name: Upload data
+    needs: deploy
     runs-on: ubuntu-latest
     environment: staging
 
     steps:
+    
     - uses: actions/checkout@v2
       with:
        ref: dev
-    
+     
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+        
     - name: Copy site data from dev branch
       uses: skiyl9x/kubectl-aws-eks@master
       env:
