add reference with workflow CI build

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - deploy
+      
+  workflow_run:
+    workflows: ["CI build"]
+    types:
+      - completed
+    
 env:
   AWS_REGION: us-east-2
 
