--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -2,8 +2,7 @@ name: Deploy on staging
 
 on:
   workflow_run:
-    workflows: 
-      - "buid-images-CI"
+    workflows: [buid-images-CI]
     types:
       - completed
     
