--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -3,8 +3,8 @@ name: Deploy on staging
 on:
   workflow_run:
     workflows: [buid-images-CI]
-    types:
-      - completed
+    types: [completed]
+    branches: [dev]
     
 env:
   AWS_REGION: us-east-2
