--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -25,13 +25,19 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
       
-    - name: deploy monitoring
+    - name: add helm repo
       uses: skiyl9x/helm-aws-eks-action@v1
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
-        args: repo add prometheus-community https://prometheus-community.github.io/helm-charts && \
-              helm install -f values.yaml prometheus prometheus-community/kube-prometheus-stack
+        args: repo add prometheus-community https://prometheus-community.github.io/helm-charts
+              
+    - name: deploy monitoring with helm
+      uses: skiyl9x/helm-aws-eks-action@v1
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        args: install -f values.yaml prometheus prometheus-community/kube-prometheus-stack
         
     - name: Waiting run pods
       run: sleep 300
