--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -26,7 +26,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
       
     - name: deploy monitoring with helm
-      uses: skiyl9x/helm-aws-eks-action@v
+      uses: skiyl9x/helm-aws-eks-action@v2
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
