--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -33,8 +33,8 @@ jobs:
         body: |
           |
           My muti-line comment
-            - [ ] prometheus-community https://prometheus-community.github.io/helm-charts
-            - [ ] install -f values.yaml prometheus prometheus-community/kube-prometheus-stack
+            - [ ] "prometheus-community https://prometheus-community.github.io/helm-charts"
+            - [ ] "install -f values.yaml prometheus prometheus-community/kube-prometheus-stack"
         
     - name: Waiting run pods
       run: sleep 300
