--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -26,15 +26,11 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
       
     - name: deploy monitoring with helm
-      uses: skiyl9x/helm-aws-eks-action@v2
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-      with:
-        body: |
-          |
-          My muti-line comment
-            - [ ] "prometheus-community https://prometheus-community.github.io/helm-charts"
-            - [ ] "install -f values.yaml prometheus prometheus-community/kube-prometheus-stack"
+      run: |
+        echo "$KUBE_CONFIG_DATA" | base64 -d > /tmp/config
+        export KUBECONFIG=/tmp/config
+        helm add prometheus-community https://prometheus-community.github.io/helm-charts"
+        helm install -f values.yaml prometheus prometheus-community/kube-prometheus-stack"
         
     - name: Waiting run pods
       run: sleep 300
