--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         echo "$KUBE_CONFIG_DATA" | base64 -d > /tmp/config
         export KUBECONFIG=/tmp/config
-        helm add prometheus-community https://prometheus-community.github.io/helm-charts"
+        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts"
         helm install -f values.yaml prometheus prometheus-community/kube-prometheus-stack"
         
     - name: Waiting run pods
