--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
         kubectl version --client
         curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
         chmod +x ./kubectl
-        mv ./kubectl /usr/bin/kubectl
+        sudo mv ./kubectl /usr/bin/kubectl
         kubectl version --client
