--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -30,19 +30,12 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
       
-    - name: add repo helm
-      uses: skiyl9x/helm-aws-eks-action@v2
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-      with:
-        args: repo add prometheus-community https://prometheus-community.github.io/helm-charts 
-        
-    - name: deploy monitoring with helm
-      uses: skiyl9x/helm-aws-eks-action@v2
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-      with:
-        args: install prometheus prometheus-community/kube-prometheus-stack 
+    - name: Deploy monitoring via helm
+      run: |
+        echo "$KUBE_CONFIG_DATA" | base64 -d > /tmp/config
+        export KUBECONFIG=/tmp/config
+        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts 
+        helm install prometheus prometheus-community/kube-prometheus-stack 
         
     - name: Waiting run pods
       run: sleep 300
