--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -30,19 +30,22 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
       
-    - name: Deploy monitoring via helm
-      run: |
-        echo "$KUBE_CONFIG_DATA" | base64 -d > /tmp/config
-        export KUBECONFIG=/tmp/config
-        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts 
-        helm install prometheus prometheus-community/kube-prometheus-stack 
+    - name: helm deploy
+      uses: koslib/helm-eks-action@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+        command: |
+              helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+              helm install prometheus prometheus-community/kube-prometheus-stack
         
     - name: Waiting run pods
       run: sleep 300
       
     - name: Deployment status
-      uses: skiyl9x/kubectl-aws-eks@master
+      uses: koslib/helm-eks-action@master
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
-        args: get deploy --namespace=default --output name | xargs -n1 -t kubectl rollout status --namespace=default
+        command: kubectl get deploy --namespace=default --output name | xargs -n1 -t kubectl rollout status --namespace=default
+
