change to koslib/helm-eks-action@master

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -28,22 +28,22 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
       
-    - name: deploy to EKS
-      uses: skiyl9x/kubectl-aws-eks@master
+    - name: Deploy to staging
+      uses: koslib/helm-eks-action@master
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
-        args: apply -f k8s
+          command: kubectl apply -f k8s
         
     - name: Waiting run pods
       run: sleep 300
       
     - name: Deployment status
-      uses: skiyl9x/kubectl-aws-eks@master
+      uses: koslib/helm-eks-action@master
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
-        args: get deploy --namespace=lemp --output name | xargs -n1 -t kubectl rollout status --namespace=lemp
+        command: kubectl get deploy --namespace=lemp --output name | xargs -n1 -t kubectl rollout status --namespace=lemp
     
   upload-data:
     name: Upload data
@@ -65,10 +65,11 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
         
     - name: Copy site data from dev branch
-      uses: skiyl9x/kubectl-aws-eks@master
+      uses: koslib/helm-eks-action@master
       env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
-        args: pod_name=`kubectl get pod --namespace=lemp -l run=nginx -o jsonpath="{.items[0].metadata.name}"` && \
-              kubectl cp data/site lemp/$pod_name:/ && \
-              kubectl exec -i  --namespace=lemp $pod_name -- chown -R www-data:www-data /site
+          command: |
+                  kubectl pod_name=`kubectl get pod --namespace=lemp -l run=nginx -o jsonpath="{.items[0].metadata.name}"` && \
+                  kubectl cp data/site lemp/$pod_name:/ && \
+                  kubectl exec -i  --namespace=lemp $pod_name -- chown -R www-data:www-data /site
