add trigger on push

--- a/.github/workflows/build-images-CI.yml
+++ b/.github/workflows/build-images-CI.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'dev'
+  push:
+    branches:
+      - 'dev'
     paths:
       - '*/Dockerfile'
       - 'data/**'
