--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -4,7 +4,8 @@ on:
  
   push:
     branches:
-      - 'dev'
+      - 'deploy'
+
   workflow_run:
     workflows: [buid-images-CI]
     types: [completed]
