--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -40,7 +40,7 @@ jobs:
           command: kubectl apply -f k8s
         
     - name: Waiting run pods
-      run: sleep 300
+      run: sleep 1
       
     - name: Deployment status
       uses: koslib/helm-eks-action@master
@@ -71,7 +71,7 @@ jobs:
     - name: Copy site data from dev branch
       uses: koslib/helm-eks-action@master
       env:
-            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
           command: |
                   pod_name=`kubectl get pod --namespace=lemp -l run=nginx -o jsonpath="{.items[0].metadata.name}"` && \
