add resourse limit for pods

--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -62,6 +62,13 @@ spec:
           readOnly: true
         ports:
           - containerPort: 80
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
       volumes:
         - name: hostpath-privileged
           persistentVolumeClaim:
