--- a/k8s/php.yaml
+++ b/k8s/php.yaml
@@ -25,6 +25,13 @@ spec:
         ports:
         - containerPort: 9000
           name: php-port
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
       volumes:
       - name: hostpath-privileged
         persistentVolumeClaim:
