--- a/k8s/mariadb.yaml
+++ b/k8s/mariadb.yaml
@@ -20,14 +20,23 @@ spec:
           - containerPort: 3306
             name: db-port
         env:
-          - name: MYSQL_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: wp-mariadb-secret
-                key: password
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: wp-mariadb-secret
+              key: password
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
       imagePullSecrets:
       - name: private-registry-cred
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
