add vault install script & add mysql statefulset yaml manifests

--- a/k8s/02-nginx-pv.yml
+++ b/k8s/02-nginx-pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wp-pv-volume-new
+  name: wp-pv-volume
   namespace: lemp
   labels:
     type: local
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-pv-volume-new
+  name: wp-pv-volume
   namespace: lemp
 spec:
   accessModes:
