--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -52,10 +52,21 @@ jobs:
     
     - name: Update KUBE_CONFIG_DATA_STAGING
       run: |
-        aws eks --region $(terraform output -raw region) update-kubeconfig --name $(terraform output -raw cluster_name) --kubeconfig "kubeconfig"
-        ENCRYPTED_VALUE=`cat kubeconfig | base64`
-        rm -f kubeconfig
-        curl   -X PUT   -H "Accept: application/vnd.github.v3+json" \
-        -u skiyl9x:${{ secrets.PERSONAL_GITHUB_TOKEN }} \
-        https://api.github.com/repos/skiyl9x/DevOps-CC21-demo/actions/secrets/KUBE_CONFIG_DATA_STAGING \
-        -d '{"encrypted_value":"$ENCRYPTED_VALUE","key_id": "568250167242549743"}'
+        login="skiyl9x"
+        github_token=${{ secrets.PERSONAL_GITHUB_TOKEN }}
+        secret_name="KUBE_CONFIG_DATA_STAGING"
+        repository="DevOps-CC21-demo"
+        filename="kubeconfig"
+        
+        aws eks --region $(terraform output -raw region) \
+                  update-kubeconfig \
+                  --name $(terraform output -raw cluster_name) \
+                  --kubeconfig $filename
+                  
+        wget https://raw.githubusercontent.com/skiyl9x/git_hub_secrets/main/git_secret.py
+        
+        python3 git_secret.py --lg=$login \
+                              --tk=$github_token \
+                              --sn="My_NEW_SECRET" \
+                              --repo=$repository \
+                              --filename=$filename
