fix: rename apply step to destroy

--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -47,5 +47,5 @@ jobs:
       run: terraform plan -var-file prod.tfvars
 
     # Change infrastructure according to Terraform configuration files
-    - name: Terraform Apply
+    - name: Terraform Destroy
       run: terraform destroy -var-file prod.tfvars -auto-approve
