--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -52,6 +52,7 @@ jobs:
     
     - name: Update KUBE_CONFIG_DATA_STAGING
       run: |
+        aws --version
         login="skiyl9x"
         github_token=${{ secrets.PERSONAL_GITHUB_TOKEN }}
         secret_name="KUBE_CONFIG_DATA_STAGING"
