--- a/.github/workflows/build-application-CI.yml
+++ b/.github/workflows/build-application-CI.yml
@@ -10,6 +10,12 @@ jobs:
 
   build-CI:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        shell: bash
+        working-directory: data
+
     steps:
       - name: Checkout git
         uses: actions/checkout@v2
