--- a/.github/workflows/build-application-CI.yml
+++ b/.github/workflows/build-application-CI.yml
@@ -38,5 +38,5 @@ jobs:
           IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG"
           docker build -t $IMAGE -f Dockerfile-database .
           printf "${GREEN}* Image $IMAGE has built successfully${NC}\n"
-          docker push $tag
+          docker push $IMAGE
           printf "${GREEN}* Image $IMAGE has pushed successfully${NC}\n"
