--- a/.github/workflows/build-application-CI.yml
+++ b/.github/workflows/build-application-CI.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - 'dev'
     paths:
-      - 'data/*'
+      - 'data/Dockerfile-database'
+      - 'data/wordpress.sql'
 jobs:
 
   build-CI:
