change job deploy-to-eks.yml trigger to do after job 'build application' will be completed

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -9,7 +9,7 @@ on:
        - 'k8s/**'
 
   workflow_run:
-    workflows: [buid-images-CI]
+    workflows: [buid-app-CI]
     types: [completed]
     branches: [dev]
   workflow_dispatch:
